--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
